changed styling to fix overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .btn {
   position: relative;
 
@@ -83,6 +87,10 @@
 }
 
 /* flex properties */
+
+.flex-auto {
+  flex: auto;
+}
 
 .fg-1 {
   flex-grow: 1;
@@ -173,6 +181,11 @@
   padding-bottom: 0.2rem;
 }
 
+.pa-v-4 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pa-t-2 {
   padding-top: 0.2rem;
 }
@@ -246,6 +259,10 @@
 
 .max-width-100p {
   max-width: 100%;
+}
+
+.max-width-100vw {
+  max-width: 100vw;
 }
 
 .min-width-fc {
